[gd_scene load_steps=6 format=3 uid="uid://dfwjafef451at"]

[ext_resource type="Theme" uid="uid://bgihxlm45a5q2" path="res://main_theme.tres" id="1_v6p8y"]
[ext_resource type="Script" uid="uid://ioli5leduffa" path="res://scripts/title_screen.gd" id="2_ak2if"]
[ext_resource type="Texture2D" uid="uid://cqr5gec27vrav" path="res://assets/background/orig_big.png" id="3_ig5kc"]
[ext_resource type="FontFile" uid="uid://h5lhoy8ttlqj" path="res://assets/Geo-Regular.ttf" id="4_05l2w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hafda"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0.47058824)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TitleScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v6p8y")
script = ExtResource("2_ak2if")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ig5kc")
expand_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 800)
layout_mode = 2
theme_override_constants/separation = 64

[node name="ContentContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.43571976, 0.5032491, 0.48834765, 1)
theme_override_font_sizes/font_size = 128
text = "YourOwnClouds"

[node name="PlayButton" type="Button" parent="CenterContainer/HBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="SettingsButton" type="Button" parent="CenterContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="CreditsButton" type="Button" parent="CenterContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer/HBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Exit"

[node name="SavegameContainer" type="PanelContainer" parent="CenterContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hafda")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/HBoxContainer/SavegameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="SavegameBTNs" type="VBoxContainer" parent="CenterContainer/HBoxContainer/SavegameContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/SavegameContainer/MarginContainer/SavegameBTNs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_05l2w")
theme_override_font_sizes/font_size = 64
text = "Savegames"
horizontal_alignment = 1

[node name="SavegameTemplate" type="Button" parent="CenterContainer/HBoxContainer/SavegameContainer/MarginContainer/SavegameBTNs"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Savegame 0"

[node name="NewSavegame" type="Button" parent="CenterContainer/HBoxContainer/SavegameContainer/MarginContainer/SavegameBTNs"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "+ New Savegame"

[connection signal="pressed" from="CenterContainer/HBoxContainer/ContentContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/ContentContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/ContentContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/ContentContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/SavegameContainer/MarginContainer/SavegameBTNs/NewSavegame" to="." method="_on_new_savegame_pressed"]
